--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,15 @@
+/* Keyframe Animations */
+@keyframes fadeInFromBottom {
+    0% {
+        opacity: 0; /* Start fully transparent */
+        transform: translateY(30px); /* Start 30px below */
+    }
+    100% {
+        opacity: 1; /* End fully opaque */
+        transform: translateY(0); /* End at original position */
+    }
+}
+
 /* Navbar Styling */
 #navbar {  /* Main header container */
     display: flex;
@@ -9,15 +21,17 @@
     z-index: 999; /* Sets header to be the highest layer; will always overlay content */
     position: fixed; /* Fixes the header position to bottom even when scrolling */
     bottom: 0px;
+    animation: fadeInFromBottom 1s ease forwards; /* Apply the animation */
+    animation-delay: 300ms; /* Delay before the animation starts */
 }
 
-#nav-links {
+#nav-links { /* Navigation container */
     width: 100%;
     max-width: 600px; /* Displays in a mobile fashion even on desktop */
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding-bottom: 4px;
+    justify-content: space-between;
+    padding: 0 8px 4px;
 }
 
 #nav-links img {
