--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@
     position: fixed; /* Fixes the header position to bottom even when scrolling */
     bottom: 0px;
     animation: fadeInFromBottom 1s ease forwards; /* Apply the animation */
-    animation-delay: 300ms; /* Delay before the animation starts */
+    animation-delay: 0ms; /* Delay before the animation starts */
 }
 
 #nav-links { /* Navigation container */
@@ -47,20 +47,28 @@
 }
 
 /* Demo Main Page Container Styling */
+#main-page {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 #main-content {
     width: 100%;
     min-height: 100vh;
-    max-width: 600px;
     background-image: url('/assets/bg/start-screen-mobile.png');
     background-position: top center;
     background-size: cover;
     display: flex;
     justify-content: center;
+    max-width: 600px;
 }
 
 #main-content #bear-buddy {
     width: 50%;
     min-width: 150px;
+    max-width: 300px;
     position: absolute;
     bottom: 15%;
     top: auto;
