--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@
 
 /* Demo Main Page Container Styling */
 #main-page {
-    display: flex;
+    /* display: flex; */
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -72,4 +72,34 @@
     position: absolute;
     bottom: 15%;
     top: auto;
+}
+
+.popup {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 0px;
+    z-index: 1000; /* Make sure it appears above other content */
+}
+
+.popup.show {
+    display: block; /* Show the popup when the class is added */
+}
+
+
+.lrg-board-popup {
+    background-image: url("/assets/elements/lrg-board.svg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: transparent !important;
+    width: 80%;
+    min-height: 250px;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
