--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,26 @@ h6 {
     margin-bottom: 35%;
 }
 
+/*Group page */
+.group-page{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/assets/bg/hallway-01.png');
+    background-position: bottom center;
+    background-size: cover;
+}
+
+.group-content{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 
 /* About Us Page Styling */
 #about-us {
@@ -265,3 +285,4 @@ h6 {
 }
     
 }
+
