--- a/styles/assets.css
+++ b/styles/assets.css
@@ -7,6 +7,27 @@
     background-position: center center;
 }
 
+.sq-btn img {
+    width: clamp(25px, 3vw, 32px)
+}
+
+.sm-btn {
+    border: none;
+    aspect-ratio: 3.02;
+    width: clamp(140px, 20vw, 200px) !important;
+    background-color: transparent;
+    background-image: url("/assets/elements/board-button.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-family: 'giulia-plain';
+    font-weight: 600;
+    font-size: clamp(20px, 3vw, 24px);
+    color: #663000 !important;
+    padding: 0 10px 10px;
+    transition: transform 200ms linear; /* Sets parameters for hover animations */
+}
+
 .md-btn {
     border: none;
     aspect-ratio: 3.02;
@@ -24,7 +45,7 @@
     transition: transform 200ms linear; /* Sets parameters for hover animations */
 }
 
-.md-btn:hover {
+.sm-btn:hover .md-btn:hover {
     transform: scale(0.85); /* Scales the button 1.15x on hover using above parameters */
 }
 
