--- a/styles/assets.css
+++ b/styles/assets.css
@@ -5,10 +5,31 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
+    background-image: url('/assets/elements/blank-sq-button.svg');
 }
 
 .sq-btn img {
     width: clamp(25px, 3vw, 32px)
+}
+
+.confirm-btn {
+    border: none;
+    aspect-ratio: 1;
+    width: clamp(40px, 8vw, 56px);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('/assets/elements/confirm.svg');
+}
+
+.cancel-btn {
+    border: none;
+    aspect-ratio: 1;
+    width: clamp(40px, 8vw, 56px);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url('/assets/elements/cancel.svg');
 }
 
 .sm-btn {
@@ -31,7 +52,7 @@
 .md-btn {
     border: none;
     aspect-ratio: 3.02;
-    width: clamp(180px, 30vw, 260px) !important;
+    width: clamp(250px, 60vw, 300px) !important;
     background-color: transparent;
     background-image: url("/assets/elements/board-button.svg");
     background-position: center center;
@@ -67,6 +88,51 @@
     background-size: cover;
 }
 
+.head-board {
+    aspect-ratio: 2.74;
+    background-image: url('/assets/elements/header-board.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: clamp(350px, 95vw, 650px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.head-board h1 {
+    color: #663000;
+    font-weight: 500;
+    font-size: clamp(64px, 16vw, 100px);
+    text-shadow: -3px -3px 2px #4C2400;
+}
+
+.lrg-board-sq {
+    aspect-ratio: 1.29;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    padding: clamp(4px, 5vw, 24px);
+    background-image: url('/assets/elements/lrg-board.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: clamp(350px, 95vw, 650px);
+    color: #663000;
+}
+
+.lrg-board-sq h4 {
+    font-size: clamp(36px, 5vw, 64px);
+    text-shadow: -2px -2px 2px #4C2400;
+    margin: 1.5% 0;
+}
+
+.lrg-board-sq p {
+    font-size: clamp(18px, 3vw, 22px);
+    color: #4C2400;
+    -webkit-text-stroke: .35px;
+}
+
 .main-content {
     display: flex;
     flex-direction: column;
@@ -76,12 +142,12 @@
     align-items: center;
 }
 
-.header-board {
-    aspect-ratio: 2.74;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url("/assets/elements/header-board.svg");
-    color: #663000;
+@media screen and (max-width: 600px) {
+    .head-board h1 {
+        text-shadow: -1.5px -1.5px 2px #4C2400;;
+    }
+
+    .lrg-board-sq h4 {
+        text-shadow: -1px -1px 1.5px #4C2400;;
+    }
 }
