--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@
     font-weight: 600;
 }
 
+a {
+    text-decoration: none;
+}
+
 h1, h2 {
     font-family: 'giulia';
     font-weight: 500;
@@ -210,18 +214,6 @@ h6 {
     padding-top: 20px;
     gap: 20px;
     padding-bottom: 85px;
-}
-
-#about-us-header {
-    width: 50%;
-    max-width: 480px;
-}
-
-#about-us-header h1 {
-    font-size: clamp(48px, 8vw, 60px);
-    font-weight: 700;
-    margin-bottom: -10px;
-    margin-top: -8px;
 }
 
 #dev-team {
