--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,13 @@ h6 {
     right: 5px;
 }
 
+#logout-btn {
+    position: fixed;
+    z-index: 999;
+    top: 5px;
+    left: 5px;
+}
+
 #info {
     aspect-ratio: 1;
     border: none;
