--- a/styles/style.css
+++ b/styles/style.css
@@ -55,8 +55,8 @@ h6 {
 #about-us-btn {
     position: fixed;
     z-index: 999;
-    top: 5px;
-    right: 5px;
+    top: 2px;
+    right: 4px;
 }
 
 #logout-btn {
@@ -70,7 +70,7 @@ h6 {
     aspect-ratio: 1;
     border: none;
     background-color: transparent;
-    background-image: url("/assets/elements/about-us.svg");
+    background-image: url("/assets/SVG/info.svg");
     background-size: contain;
     background-repeat: no-repeat;
     width: clamp(44px, 10vw, 64px);
