--- a/styles/assets.css
+++ b/styles/assets.css
@@ -179,6 +179,81 @@
     align-items: center;
 }
 
+.msg-popup {
+    aspect-ratio: 1.18;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url("/assets/SVG/msg-popup.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: clamp(280px, 98vw, 560px);
+    text-align: center;
+    gap: 15px;
+}
+
+.msg-popup-head {
+    font-size: clamp(36px, 5.5vw, 48px);
+    letter-spacing: -1px;
+    color: #fff;
+    padding-top: 10%;
+    -webkit-text-stroke: 1px #82C822;
+    text-shadow: 3px 3px rgba(0, 0, 0, .20);
+}
+
+.msg-close {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: clamp(280px, 98vw, 560px);
+    margin-top: 72px;
+}
+
+.msg-popup-close {
+    aspect-ratio: 1;
+    width: clamp(50px, 10vw, 64px);
+    border: none;
+    background-color: transparent;
+    background-image: url("/assets/SVG/msg-popup-close.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.msg-popup-text {
+    padding: 8.5%;
+    font-weight: 700;
+    font-size: clamp(18px, 4vw, 25px);
+    line-height: 1.35;
+    color: #fff;
+    text-shadow: 2px 2px rgba(0, 0, 0, .20);
+}
+
+.msg-popup-buttons {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.msg-popup-btn {
+    aspect-ratio: 2.20;
+    border: none;
+    background-color: transparent;
+    background-image: url("/assets/SVG/msg-popup-btn.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: clamp(120px, 35vw, 180px);
+    font-size: clamp(24px, 4.5vw, 32px);
+    color: #fff;
+    letter-spacing: -1px;
+    -webkit-text-stroke: 1px #82C822;
+    text-shadow: 3px 3px rgba(0, 0, 0, .20);
+    text-transform: uppercase;
+    font-family: 'giulia-plain';
+}
+
 .option-menu {
     aspect-ratio: .583;
     width: clamp(320px, 80vw, 420px);
@@ -204,8 +279,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5vh;
-    padding-top: 3.5%;
+    gap: 20px;
+    margin-top: 0px;
 }
 
 .option-btn {
@@ -213,7 +288,7 @@
     border: none;
     background-color: transparent;
     background-image: url("/assets/SVG/option-btn.svg");
-    width: clamp(180px, 60vw, 280px);
+    width: clamp(160px, 55vw, 260px);
     text-transform: uppercase;
     font-family: 'giulia-plain';
     font-weight: 600;
@@ -230,7 +305,7 @@
     border: none;
     background-color: transparent;
     background-image: url("/assets/SVG/option-btn-active.svg");
-    width: clamp(180px, 60vw, 280px);
+    width: clamp(160px, 55vw, 260px);
     text-transform: uppercase;
     font-family: 'giulia-plain';
     font-weight: 600;
