--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,21 @@ h6 {
     left: 5px;
 }
 
+#logout {
+    aspect-ratio: 1;
+    border: none;
+    background-color: transparent;
+    background-image: url("/assets/SVG/logout.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: clamp(50px, 10vw, 70px);
+    transition: transform 200ms linear; /* Sets parameters for hover animations */
+}
+
+#logout:hover {
+    transform: scale(0.85); /* Scales the button 1.15x on hover using above parameters */
+}
+
 #info {
     aspect-ratio: 1;
     border: none;
