--- a/styles/assets.css
+++ b/styles/assets.css
@@ -261,6 +261,8 @@
     flex-direction: column;
     align-items: center;
     background-image: url(/assets/SVG/option-menu.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
     gap: 7.5%;
 }
 
