--- a/styles/style.css
+++ b/styles/style.css
@@ -163,12 +163,34 @@ h6 {
 
 
 #user-greeting, #name-goes-here {
-    font-size: clamp(72px, 15vw, 160px) !important;
+    font-size: clamp(72px, 15vw, 110px) !important;
     font-weight: 900;
     letter-spacing: -0.25vw;    
     font-family: 'giulia-plain' !important;
     -webkit-text-stroke: 6px #663000;
-    color:#FAF9DA
+    color:#FAF9DA;
+    border-bottom: none;
+    
+}
+
+#user-greeting1 {
+    font-size: clamp(31px, 7vw, 80px) !important;
+    font-weight: 900;
+    letter-spacing: -0.25vw;    
+    font-family: 'giulia-plain' !important;
+    -webkit-text-stroke: 6px #663000;
+    color:#FAF9DA;
+    border-bottom: none;
+    
+}
+
+#user-greeting2 {
+    font-size: clamp(18px, 5vw, 32px) !important;
+    font-weight: 900;    
+    font-family: 'giulia-plain' !important;
+    -webkit-text-stroke: 2px #663000;
+    color:#FAF9DA;
+    border-bottom: none;
     
 }
 
