--- a/styles/assets.css
+++ b/styles/assets.css
@@ -280,6 +280,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 1200px;
     min-height: 100vh;
     align-items: center;
 }
