--- a/styles/style.css
+++ b/styles/style.css
@@ -87,16 +87,52 @@ h6 {
 }
 
 #group-task-creation {
-    max-width: 400px;
+    max-width: 310px;
+    gap: 20px;
+}
+
+#group-task-creation form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0px;
+}
+
+#group-task-creation .mb-4 {
+    margin-bottom: 0 !important;
 }
 
 #group-task-submit-btn {
-    width: 180px;
-    font-size: clamp(36px, 4.5vw, 36px);
+    width: 150px;
+    font-size: clamp(20px, 3.5vw, 28px);
+    margin-top: 20px;
 }
+
 
 #chat-container {
 
+}
+
+#chat-display {
+    border: 6px solid white !important;
+    border-bottom: none !important;
+    border-radius: 20px 20px 0 0 !important;
+    background-color: #f5E3a9;
+    box-shadow: 2px 5px 1px #000;
+}
+
+#chat-input-area {
+    border: 6px solid white !important;
+    border-top: none !important;
+    background-color: #f5E3a9;
+    border-radius: 0 0 20px 20px !important;
+    box-shadow: 2px 5px 1px #000;
+}
+
+#send-btn {
+    font-size: clamp(20px, 3.5vw, 24px) !important;
+    width: 160px;
 }
 
 #user-greeting, #name-goes-here {
