--- a/styles/style.css
+++ b/styles/style.css
@@ -82,11 +82,21 @@ h6 {
     -webkit-text-stroke: 6px #663000;
 }
 
-#group-task-content {
+#task-list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
 
+#group-task-content {
+    flex-direction: row;
+    gap: 20px;
+    width: 100%;
+    justify-content: center;
 }
 
 #group-task-creation {
+    width: 100%;
     max-width: 310px;
     gap: 20px;
 }
@@ -99,10 +109,6 @@ h6 {
     gap: 0px;
 }
 
-#group-task-creation .mb-4 {
-    margin-bottom: 0 !important;
-}
-
 #group-task-submit-btn {
     width: 150px;
     font-size: clamp(20px, 3.5vw, 28px);
@@ -111,7 +117,7 @@ h6 {
 
 
 #chat-container {
-
+    width: 100%;
 }
 
 #chat-display {
