--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,8 @@ h6 {
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 12px;
 }
 
 #group-task-content {
@@ -93,6 +95,7 @@ h6 {
     gap: 20px;
     width: 100%;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 #group-task-creation {
@@ -153,11 +156,11 @@ h6 {
 }
 
 #user-greeting1 {
-    font-size: clamp(31px, 7vw, 80px) !important;
+    font-size: clamp(22px, 3.5vw, 36px) !important;
     font-weight: 900;
-    letter-spacing: -0.25vw;    
+    /* letter-spacing: -0.15vw;     */
     font-family: 'giulia-plain' !important;
-    -webkit-text-stroke: 6px #663000;
+    -webkit-text-stroke: 3px #663000;
     color:#FAF9DA;
     border-bottom: none;
     
