--- a/styles/style.css
+++ b/styles/style.css
@@ -88,6 +88,7 @@ h6 {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 12px;
+    justify-content: center;
 }
 
 #group-task-content {
@@ -145,7 +146,7 @@ h6 {
 }
 
 #user-greeting, #name-goes-here {
-    font-size: clamp(72px, 15vw, 110px) !important;
+    font-size: clamp(60px, 15vw, 110px) !important;
     font-weight: 900;
     letter-spacing: -0.25vw;    
     font-family: 'giulia-plain' !important;
@@ -156,7 +157,7 @@ h6 {
 }
 
 #user-greeting1 {
-    font-size: clamp(22px, 3.5vw, 36px) !important;
+    font-size: 36px !important;
     font-weight: 900;
     /* letter-spacing: -0.15vw;     */
     font-family: 'giulia-plain' !important;
